[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bosses/BossEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bosses/HealthBar/HealthBar.gd" type="Script" id=2]
[ext_resource path="res://Shaders/White.png" type="Texture" id=3]

[node name="Boss" type="Node2D"]
z_index = 2

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 96 )
max_health = 30

[node name="HealthBar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="NinePatchRect" parent="HealthBar"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 27.6542
margin_top = 1050.25
margin_right = 355.654
margin_bottom = 1058.25
texture = ExtResource( 3 )

[node name="FillEffect" type="NinePatchRect" parent="HealthBar"]
margin_left = 27.6542
margin_top = 1050.25
margin_right = 355.654
margin_bottom = 1058.25
texture = ExtResource( 3 )

[node name="Fill" type="NinePatchRect" parent="HealthBar"]
modulate = Color( 0.905882, 0.0862745, 0.0862745, 1 )
margin_left = 27.6542
margin_top = 1050.25
margin_right = 355.654
margin_bottom = 1058.25
texture = ExtResource( 3 )

[node name="FillTween" type="Tween" parent="HealthBar"]

[node name="TweenTimer" type="Timer" parent="HealthBar"]
wait_time = 0.5
one_shot = true

